--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "react": "^16.8.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^16.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
